--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -25,7 +25,7 @@
         <mat-form-field title="Buscar por nombre de municipio" class="example-full-width" id="form_buscar" appearance="outline">
           <mat-label  for="search" id="search_label">Buscar por nombre de municipio</mat-label>
           <input matInput autofocus class="border-4 px-4" name="search" id="search" placeholder="Buscar" type="text"
-            spellcheck="false" inputmode="numeric" #searchstring (keyup.enter)="onSearch(searchstring.value)">
+            spellcheck="false" inputmode="text" #searchstring (keyup.enter)="onSearch(searchstring.value)">
         </mat-form-field>
     </form>
 
