--- a/src/app/accesible/accesible.component.html
+++ b/src/app/accesible/accesible.component.html
@@ -313,7 +313,7 @@
       </ng-container>
   
       <ng-container matColumnDef="localidad">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> Porcentaje viviendas zona negra </th>
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Porcentaje del total </th>
         <td mat-cell *matCellDef="let element"> {{element.porcentaje_viviendas_zonanegra}} </td>
       </ng-container>
   
