--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -30,6 +30,7 @@
                     type="text" spellcheck="false" inputmode="text" #searchstring
                     (keydown.enter)="onSearch(searchstring.value)">
             </mat-form-field>
+            <button class="mobile-btn" type="submit">Buscar</button>
         </form>
 
     </div>
