--- a/src/app/accesible/accesible.component.html
+++ b/src/app/accesible/accesible.component.html
@@ -88,11 +88,6 @@
 <div>
   <table mat-table matSort [dataSource]="dataSourceCentros" class="mat-elevation-z8"
     *ngIf="selectedLayer == 'centros_educativos_zbg_2021' || selectedLayer == 'centros_educativos_zbg_2022' || selectedLayer == 'instalaciones_sanitarias_zbg_2021' || selectedLayer == 'instalaciones_sanitarias_zbg_2022'">
-    <!-- ['Nucleo','Codigo de la zona','Factor escenario y patrimonio','Factor movilidad','Factor equipamiento y servicio','Factor alojamiento','Factor económico','ISDT100','Area afectada del nucleo','Tipo de zona','Municipio (INE)', 'Año']  -->
-    <!-- Position Column -->
-
-    <!-- <mat-text-column name="nucleo"></mat-text-column> 
-      <mat-text-column name="codigo_zona"></mat-text-column>  -->
 
     <ng-container matColumnDef="centro">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Centro </th>
@@ -127,11 +122,7 @@
 <div>
   <table mat-table matSort [dataSource]="dataSourcePoligonos" class="mat-elevation-z8"
     *ngIf=" selectedLayer == 'poligonos_zbg_2021' || selectedLayer == 'poligonos_zbg_2022'">
-    <!-- ['Nucleo','Codigo de la zona','Factor escenario y patrimonio','Factor movilidad','Factor equipamiento y servicio','Factor alojamiento','Factor económico','ISDT100','Area afectada del nucleo','Tipo de zona','Municipio (INE)', 'Año']  -->
-    <!-- Position Column -->
 
-    <!-- <mat-text-column name="nucleo"></mat-text-column> 
-      <mat-text-column name="codigo_zona"></mat-text-column>  -->
 
     <ng-container matColumnDef="nombre_poligono">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Nombre polígono </th>
@@ -166,11 +157,6 @@
 <div>
   <table mat-table matSort [dataSource]="dataSourceInmobiliarias" class="mat-elevation-z8"
     *ngIf=" selectedLayer == 'ui_zbg_2022_x_muni'">
-    <!-- ['Nucleo','Codigo de la zona','Factor escenario y patrimonio','Factor movilidad','Factor equipamiento y servicio','Factor alojamiento','Factor económico','ISDT100','Area afectada del nucleo','Tipo de zona','Municipio (INE)', 'Año']  -->
-    <!-- Position Column -->
-
-    <!-- <mat-text-column name="nucleo"></mat-text-column> 
-      <mat-text-column name="codigo_zona"></mat-text-column>  -->
 
     <ng-container matColumnDef="municipio">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Municipio </th>
@@ -293,11 +279,6 @@
   <div>
     <table mat-table matSort [dataSource]="dataSourceViviendas" class="mat-elevation-z8"
       *ngIf="selectedLayer == 'viviendas_zn_2022_x_muni'">
-      <!-- ['Nucleo','Codigo de la zona','Factor escenario y patrimonio','Factor movilidad','Factor equipamiento y servicio','Factor alojamiento','Factor económico','ISDT100','Area afectada del nucleo','Tipo de zona','Municipio (INE)', 'Año']  -->
-      <!-- Position Column -->
-  
-      <!-- <mat-text-column name="nucleo"></mat-text-column> 
-        <mat-text-column name="codigo_zona"></mat-text-column>  -->
   
       <ng-container matColumnDef="centro">
         <th mat-header-cell mat-sort-header *matfHeaderCellDef> Código municipio </th>
@@ -315,6 +296,34 @@
       <ng-container matColumnDef="localidad">
         <th mat-header-cell mat-sort-header *matHeaderCellDef> Porcentaje del total </th>
         <td mat-cell *matCellDef="let element"> {{element.porcentaje_viviendas_zonanegra}} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  
+    </table>
+  
+  
+  </div>
+  <div>
+    <table mat-table matSort [dataSource]="dataSourceCoberturas" class="mat-elevation-z8"
+      *ngIf=" selectedLayer == 'zonas_cubiertas_2021' || selectedLayer == 'zonas_cubiertas_2022'">
+  
+      <ng-container matColumnDef="municipio">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Nombre municipio </th>
+        <td mat-cell *matCellDef="let element"> {{element.municipio}} </td>
+      </ng-container>
+      <ng-container matColumnDef="codigo_mun">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Código del municipio </th>
+        <td mat-cell *matCellDef="let element"> {{element.codigo_mun}} </td>
+      </ng-container>
+      <ng-container matColumnDef="tipo_zona">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Tipo zona </th>
+        <td mat-cell *matCellDef="let element"> {{element.tipo_zona}} </td>
+      </ng-container>
+      <ng-container matColumnDef="razon_social">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Razón social </th>
+        <td mat-cell *matCellDef="let element"> {{element.razon_social}} </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
