Adición de capa satélite, cambio en selectores de indicadores y mayor diferenciación de zonas por colores

--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -9,7 +9,7 @@
                 <mat-select class="selector" multiple [(ngModel)]="selectedLayers" [compareWith]="comparer">
                     <mat-optgroup *ngFor="let elem of layerRelations" [label]="elem.optGroup">
                         <mat-option *ngFor="let option of elem.options" (onSelectionChange)="capture($event)"
-                            [value]="option.value" [disabled]="!option.isEnabled">{{option.label}}</mat-option>
+                            [value]="option.value">{{option.label}}</mat-option>
                     </mat-optgroup>
                 </mat-select>
             </mat-form-field>
