--- a/src/global.css
+++ b/src/global.css
@@ -32,7 +32,7 @@ select.c-select {
 
 
 #button_toc{
-  background: white url(/lib/IDEAragon/themes/default/images/layers.png)
+  background: white url(./assets/layers.png)
   center center/cover no-repeat !important;
 }
 .rotate-north {
